# local-chatbot-with-rag-with-fastapi-ollama-react-faiss-postgres

./: .gitignore  README.md
chatbot-api/: Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml
chatbot-api/alembic/: env.py
chatbot-api/api/: database.py  main.py  models.py
chatbot-api/api/config/: env.py
chatbot-api/api/routers/: chat.py  documents.py  llm.py
chatbot-api/api/services/: ollama.py  vector_store.py
chatbot-api/api/utils/: text_processing.py
chatbot-api/tests/: conftest.py
chatbot-api/tests/routers/: test_chat.py  test_documents.py  test_llm.py
chatbot-api/tests/services/: test_ollama.py  test_vector_store.py
chatbot-api/tests/utils/: test_text_processing.py
chatbot-infrastructure/: Makefile  README.md  docker-compose.yml
chatbot-ui/: Dockerfile  README.md  package-lock.json  package.json
chatbot-ui/src/: App.js  index.js
chatbot-ui/src/components/: Chat.js  ChatHistory.js  DocumentUpload.js  ModelSelector.js
chatbot-ui/src/services/: api.js
